# PKS_kr_3

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
include/commands/: Command.h
include/controllers/: TimeTrackerController.h
include/factories/: ReportFactory.h
include/models/: Project.h  Task.h  TimeSession.h  User.h
include/observers/: Observer.h
include/strategies/: ExportStrategy.h
src/: main.cpp
src/commands/: Command.cpp
src/controllers/: TimeTrackerController.cpp
src/factories/: ReportFactory.cpp
src/models/: Project.cpp  Task.cpp  TimeSession.cpp  User.cpp
src/observers/: Observer.cpp
src/strategies/: ExportStrategy.cpp
tests/: CMakeLists.txt  scenario_create_project_task.cpp  scenario_export_csv.cpp  scenario_start_stop.cpp  unit_tests.cpp
